--- a/contribute.html
+++ b/contribute.html
@@ -103,7 +103,7 @@ If you would like to see this website in your language you can help translate it
 <br>
 Also if you want to contribute to our ROM or website check out are Github page:
 <a href="https://github.com/OwnROM"> <p style=text-align:center><font color=0b9b8c>Github</font></a>
-<a href="https://github.com/OwnROM/OwnROM-Website"> <p style=text-align:center><font color=0b9b8c>Website Repository</font></a>
+<a href="https://github.com/OwnROM/ownrom.github.io"> <p style=text-align:center><font color=0b9b8c>Website Repository</font></a>
 
 
 </a>
@@ -197,7 +197,7 @@ If you would like to see this website in your language you can help translate it
 <br>
 Also if you want to contribute to our ROM or website check out are Github page:
 <a href="https://github.com/OwnROM"> <p style=text-align:center><font color=0b9b8c>Github</font></a>
-<a href="https://github.com/OwnROM/OwnROM-Website"> <p style=text-align:center><font color=0b9b8c>Website Repository</font></a>
+<a href="https://github.com/OwnROM/ownrom.github.io"> <p style=text-align:center><font color=0b9b8c>Website Repository</font></a>
 
 
 </a>
