Updated links and backend code

--- a/contribute.html
+++ b/contribute.html
@@ -24,6 +24,7 @@
     <script src="js/materialize.min.js"></script>
     
 </body>
+
 <font face=Roboto-Thin>
 <nav>
 <div class="nav-wrapper fglh454">
@@ -116,7 +117,7 @@ Also if you want to contribute to our ROM or website check out are Github page:
 <div id="tab3" class="row">
 
 <p>&nbsp;&nbsp;&nbsp;Donations: This would help to support the project buy being able to pay for the costs of running this project (Severs, Mirrors, Etc.) and to also to improve on them. </p> &nbsp;&nbsp;&nbsp;
-<a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=wib6wh-3Zk2veyypqyGXmeoGS_FeRE2G7XZ2mkpIkBt7UOM3StuP-RdkveS&dispatch=5885d80a13c0db1f8e263663d3faee8d66f31424b43e9a70645c907a6cbd8fb4"><p style=text-align:center><font color=0b9b8c>Donation Link</font></a>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY"><p style=text-align:center><font color=0b9b8c>Donation Link</font></a>
 
 </div>
 
@@ -131,7 +132,6 @@ Also if you want to contribute to our ROM or website check out are Github page:
 
 
 </font>
-
 
 <div class="col s12 hide-on-large-only">
 
@@ -214,7 +214,7 @@ Also if you want to contribute to our ROM or website check out are Github page:
 
 
 <p>&nbsp;&nbsp;&nbsp;Donations: This would help to support the project buy being able to pay for the costs of running this project (Severs, Mirrors, Etc.) and to also to improve on them. </p> &nbsp;&nbsp;&nbsp;
-<a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=wib6wh-3Zk2veyypqyGXmeoGS_FeRE2G7XZ2mkpIkBt7UOM3StuP-RdkveS&dispatch=5885d80a13c0db1f8e263663d3faee8d66f31424b43e9a70645c907a6cbd8fb4"><p style=text-align:center><font color=0b9b8c>Donation Link</font></a>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY"><p style=text-align:center><font color=0b9b8c>Donation Link</font></a>
 
 
 <div class="white z-depth-1 hide-on-large-only">
@@ -238,20 +238,20 @@ Also if you want to contribute to our ROM or website check out are Github page:
 
 </div>
 
-
-<footer>
-    <div class=row>
+<footer class="white">
+               <div class="row">
     <div class="center">
-        <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
+           <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
         <a href="https://twitter.com/Own_Droid" target="_blank"><font color=0b9b8c> Twitter |</font></a>
         <a href="https://www.facebook.com/OwnDroid.nl" target="_blank"><font color=0b9b8c>Facebook |</font></a>
         <a href="https://github.com/OwnROM" target="_blank"><font color=0b9b8c>GitHub |</font></a>
-        <a href="http://ownrom.blogspot.com/feeds/posts/default" target="_blank"><font color=0b9b8c>RSS |</font></a>
-        <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=wib6wh-3Zk2veyypqyGXmeoGS_FeRE2G7XZ2mkpIkBt7UOM3StuP-RdkveS&dispatch=5885d80a13c0db1f8e263663d3faee8d66f31424b43e9a70645c907a6cbd8fb4" target="_blank"><font color=0b9b8c>Donate |</font></a>
+        <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
     </div>
     </FONT>
     </div>
-    </footer>  
+    </footer>
+
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
