--- a/downloads.html
+++ b/downloads.html
@@ -723,19 +723,19 @@ p{text-align:center;}</style>
 </ul>
 </div>
  </main>
- <footer>
-    <div class=row>
+ <footer class="white">
+               <div class="row">
     <div class="center">
-        <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
+           <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
         <a href="https://twitter.com/Own_Droid" target="_blank"><font color=0b9b8c> Twitter |</font></a>
         <a href="https://www.facebook.com/OwnDroid.nl" target="_blank"><font color=0b9b8c>Facebook |</font></a>
         <a href="https://github.com/OwnROM" target="_blank"><font color=0b9b8c>GitHub |</font></a>
-        <a href="http://ownrom.blogspot.com/feeds/posts/default" target="_blank"><font color=0b9b8c>RSS |</font></a>
-        <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=wib6wh-3Zk2veyypqyGXmeoGS_FeRE2G7XZ2mkpIkBt7UOM3StuP-RdkveS&dispatch=5885d80a13c0db1f8e263663d3faee8d66f31424b43e9a70645c907a6cbd8fb4" target="_blank"><font color=0b9b8c>Donate |</font></a>
+        <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
     </div>
     </FONT>
     </div>
-    </footer>  
+    </footer>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
