--- a/team.html
+++ b/team.html
@@ -608,19 +608,19 @@ p{text-align:center;}</style>
 
 
 
-</div><footer>
-    <div class=row>
+</div><footer class="white">
+               <div class="row">
     <div class="center">
-        <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
+           <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
         <a href="https://twitter.com/Own_Droid" target="_blank"><font color=0b9b8c> Twitter |</font></a>
         <a href="https://www.facebook.com/OwnDroid.nl" target="_blank"><font color=0b9b8c>Facebook |</font></a>
         <a href="https://github.com/OwnROM" target="_blank"><font color=0b9b8c>GitHub |</font></a>
-        <a href="http://ownrom.blogspot.com/feeds/posts/default" target="_blank"><font color=0b9b8c>RSS |</font></a>
-        <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=wib6wh-3Zk2veyypqyGXmeoGS_FeRE2G7XZ2mkpIkBt7UOM3StuP-RdkveS&dispatch=5885d80a13c0db1f8e263663d3faee8d66f31424b43e9a70645c907a6cbd8fb4" target="_blank"><font color=0b9b8c>Donate |</font></a>
+        <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
     </div>
     </FONT>
     </div>
-    </footer>  
+    </footer>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-56987211-1','auto');ga('send','pageview');</script>
 </html>
 
