Now uses Roboto font and generel tweaks and fixs

--- a/404.html
+++ b/404.html
@@ -22,13 +22,18 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <body bgcolor="#000000">
+    <style>
+    * {
+      font-family: Roboto;
+    }
+</style>
 </body>
 <font face=Roboto-Thin>
 <nav>
 <div class="nav-wrapper fglh454">
 <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
 <ul id=nav-mobile class="right side-nav">
-<li><a href=index.html>&nbsp;Back To Home ---></a></li>
+<li><a href=index.html class="mdi-content-send">&nbsp;Back To Home</a></li>
 </ul>
 <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
 </div>
