--- a/changelog.html
+++ b/changelog.html
@@ -21,17 +21,18 @@
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
+    <style>
+    * {
+      font-family: Roboto;
+    }
+</style>
 </body>
 <font face=Roboto-Thin>
 <nav>
 <div class="nav-wrapper fglh454">
 <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
 <ul id=nav-mobile class="right side-nav">
-<li><a class=mdi-editor-border-color target="_blank" href="https://ownrom.blogspot.com">&nbsp;Blog</a></li>
-<li><a class=mdi-file-cloud-download href=downloads.html>&nbsp;Downloads</a></li>
-<li><a class=mdi-action-account-box href=team.html>&nbsp;The Team</a></li>
-<li><a class=mdi-content-add-box href=contribute.html>&nbsp;Contribute</a></li>
-<li><a class=mdi-device-storage href=about.html>&nbsp;Features And Links</a></li>
+<li><a href=downloads.html class="mdi-content-send">&nbsp;Back To Downloads</a></li>
 </ul>
 <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
 </div>
