--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
+ <style>
+    * {
+      font-family: Roboto;
+    }
+</style>
 </body>
 <font face=Roboto-Thin>
 <nav>
