--- a/contribute.html
+++ b/contribute.html
@@ -22,7 +22,11 @@
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
-    
+    <style>
+    * {
+      font-family: Roboto;
+    }
+</style>
 </body>
 
 <font face=Roboto-Thin>
