--- a/downloads.html
+++ b/downloads.html
@@ -15,6 +15,11 @@ p{text-align:center;}</style>
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
+    <style>
+    * {
+      font-family: Roboto;
+    }
+</style>
 </body>
 <font face=Roboto-Thin>
 <header>
