--- a/team.html
+++ b/team.html
@@ -13,6 +13,11 @@ p{text-align:center;}</style>
 <body>
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.min.js"></script>
+<style>
+    * {
+      font-family: Roboto;
+    }
+</style>
 </body>
 <font face=Roboto-Thin>
 <nav>
