Cleaned up code and fixed one codename

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     }
 </style>
 </body>
-<font face=Roboto-Thin>
+
 <nav>
 <div class="nav-wrapper fglh454">
 <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
@@ -41,8 +41,8 @@
 </ul>
 <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
 </div>
-</font>
-<font face=Roboto-Thin>
+
+
 </nav>
 
 
@@ -69,7 +69,7 @@
 
 <div id="tab1" class="row hide-on-med-and-down">
 
-<h5><font face=Roboto-Thin>About Us</font>
+<h5>About Us
 </h5>
 <p>&nbsp; This is Android our way, and the good way. This ROM is made by only friendly developers who are listening to the needs of their users. Every single week there is going to be a poll with a choice of 2 Features/Kernels/etc..., please share you thoughts with us and help us make a great ROM!!!</p>
 
@@ -77,8 +77,8 @@
 
 <div id="tab2" class="row">
 
-<font face=Roboto-Thin>
-<h5><font face=Roboto-Thin>Social Media And Community:</font>
+
+<h5>Social Media And Community:
 </h5>
 <a href="https://twitter.com/Own_Droid">
     <p style=text-align:center><font color=0b9b8c>Twitter Link</font>
@@ -98,7 +98,7 @@
 <a href="http://ownrom.blogspot.com/feeds/posts/default">
     <p style=text-align:center><font color=0b9b8c>RSS Link</font>
 </a>
-<h5><font face=Roboto-Thin>Credits:</font></h5>
+<h5>Credits:</h5>
 <p>
     - Google
     <br>- Paranoid Android
@@ -132,7 +132,7 @@
 
 <div id="tab3" class="row">
 
-<h5><font face=Roboto-Thin>KitKat Features</font></h5>
+<h5>KitKat Features</h5>
 <p>- Build With SaberMod V4.8
     </br>- Build In SuperUser
     </br>- Quick Notification Drawer
@@ -158,7 +158,7 @@
 
 <div id="tab4" class="row">
 
-<h5><font face=Roboto-Thin>Lollipop Features</font></h5>
+<h5>Lollipop Features</h5>
 <p>- Build With Linaro toolchain with -03 optimizations,
 For ROM and Kernel Compilations
     </br>- Build In SuperUser (Not Yet)
@@ -209,7 +209,7 @@ For ROM and Kernel Compilations
 
 
 
-<h5><font face=Roboto-Thin>About Us</font>
+<h5>About Us
 </h5>
 <p>&nbsp; This is Android our way, and the good way. This ROM is made by only friendly developers who are listening to the needs of their users. Every single week there is going to be a poll with a choice of 2 Features/Kernels/etc..., please share you thoughts with us and help us make a great ROM!!!</p>
 
@@ -224,8 +224,8 @@ For ROM and Kernel Compilations
 
 
 
-<font face=Roboto-Thin>
-<h5><font face=Roboto-Thin>Social Media And Community:</font>
+
+<h5>Social Media And Community:
 </h5>
 <a href="https://twitter.com/Own_Droid">
     <p style=text-align:center><font color=0b9b8c>Twitter Link</font>
@@ -245,7 +245,7 @@ For ROM and Kernel Compilations
 <a href="http://ownrom.blogspot.com/feeds/posts/default">
     <p style=text-align:center><font color=0b9b8c>RSS Link</font>
 </a>
-<h5><font face=Roboto-Thin>Credits:</font></h5>
+<h5>Credits:</h5>
 <p>
     - Google
     <br>- Paranoid Android
@@ -284,7 +284,7 @@ For ROM and Kernel Compilations
 </div>
 
 
-<h5><font face=Roboto-Thin>KitKat Features</font></h5>
+<h5>KitKat Features</h5>
 <p>- Build With SaberMod V4.8
     </br>- Build In SuperUser
     </br>- Quick Notification Drawer
@@ -314,7 +314,7 @@ For ROM and Kernel Compilations
 </div>
 
 
-<h5><font face=Roboto-Thin>Lollipop Features</font></h5>
+<h5>Lollipop Features</h5>
 <p>- Build With Linaro toolchain with -03 optimizations,
 For ROM and Kernel Compilations
     </br>- Build In SuperUser (Not Yet)
@@ -360,8 +360,7 @@ For ROM and Kernel Compilations
         <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
     </div>
-    </FONT>
-    </div>
+        </div>
     </footer>
 <script>
     (function (i, s, o, g, r, a, m) {
