--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 </style>
 </body>
-<font face=Roboto-Thin>
+
 <nav>
 <div class="nav-wrapper fglh454">
 <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
@@ -42,9 +42,8 @@
 </div>
 </nav>
 
-</font>
-<font face=Roboto-Thin>
-<h5><font face=Roboto-Thin>This Is OwnRom!</font>
+
+<h5>This Is OwnRom!
 </h5>
     <div class="center">
 <img width=250 height=423 align=middle src="images/11.png">
@@ -52,7 +51,7 @@
 <img width=250 height=423 align=middle src="images/33.png">
 <img width=250 height=423 align=middle src="images/44.png">
 <img width=250 height=423 align=middle src="images/55.png">
-<h5><font face=Roboto-Thin>We Do Android Development Our Own Way!!!</font></h5>
+<h5>We Do Android Development Our Own Way!!!</h5>
 
 
 
@@ -68,7 +67,6 @@
         <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
     </div>
-    </FONT>
     </div>
     </footer> 
 <script>
