--- a/downloads.html
+++ b/downloads.html
@@ -21,7 +21,7 @@ p{text-align:center;}</style>
     }
 </style>
 </body>
-<font face=Roboto-Thin>
+
 <header>
 <nav id="">
 <div class="nav-wrapper fglh454">
@@ -35,8 +35,8 @@ p{text-align:center;}</style>
 </ul>
 <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
 </div>
-</font>
-<font face=Roboto-Thin>
+
+
 </nav>
 </header>
 
@@ -63,7 +63,7 @@ p{text-align:center;}</style>
 
 <div id="tab1" class="row hide-on-med-and-down">
 <div class="center">
-<h5><font face=Roboto-Thin>Coming From Another ROM:</font></h5>
+<h5>Coming From Another ROM</h5>
             <p>-Download Latest OwnROM
                 </br>-Download Latest OwnDroid G-Apps
                 </br>-Push To The Download Directory
@@ -72,7 +72,7 @@ p{text-align:center;}</style>
                 </br>-Flash ROM and G-Apps
                 </br>-Reboot And Own Your Droid!!!
             </p>
-            <h5><font face=Roboto-Thin>Update OwnROM:</font></h5>
+            <h5>Update OwnROM:</h5>
             <p>-Download Latest OwnROM
                 </br>-Download Latest OwnDroid G-Apps
                 </br>-Push To The Download Directory
@@ -81,7 +81,7 @@ p{text-align:center;}</style>
                 </br>-Flash ROM and G-Apps
                 </br>-Reboot And Own Your Droid!!!
             </p>
-            <p><font face=Roboto-Thin>As always, no one but only you can be held responsible if you (soft) brick your device. So don't cry here...</font>
+            <p>As always, no one but only you can be held responsible if you (soft) brick your device. So don't cry here...
             </p>
 </div>
 </div>
@@ -93,7 +93,7 @@ p{text-align:center;}</style>
 </div>
 <div id="tab3" class="row">
 
-<h5><font face=Roboto-Thin>&nbsp;Add-Ons/Extras</font>
+<h5>&nbsp;Add-Ons/Extras
 </h5>
 <ul class=collapsible>
     <li>
@@ -122,7 +122,7 @@ p{text-align:center;}</style>
 </div>
 <div id="tab4" class="row">
 
-<h5><font face=Roboto-Thin>&nbsp;Download KitKat (Android 4.4.4)</font>
+<h5>&nbsp;Download KitKat (Android 4.4.4)
 </h5>
 <ul class=collapsible>
 
@@ -274,7 +274,7 @@ p{text-align:center;}</style>
 </div>
 <div id="tab5" class="row">
 
-<h5><font face=Roboto-Thin>&nbsp;Download Lollipop (Android 5.0.2) (In The Works)</font></h5>
+<h5>&nbsp;Download Lollipop (Android 5.0.2) (In The Works)</h5>
 <p>&nbsp;&nbsp;Devices that currently have downloads will be listed below. As more become available they will be added.</p>
 <ul class=collapsible>
    
@@ -352,7 +352,7 @@ p{text-align:center;}</style>
 
 
 <div class="center">
-<h5><font face=Roboto-Thin>Coming From Another ROM:</font></h5>
+<h5>Coming From Another ROM:</h5>
             <p>-Download Latest OwnROM
                 </br>-Download Latest OwnDroid G-Apps
                 </br>-Push To The Download Directory
@@ -361,7 +361,7 @@ p{text-align:center;}</style>
                 </br>-Flash ROM and G-Apps
                 </br>-Reboot And Own Your Droid!!!
             </p>
-            <h5><font face=Roboto-Thin>Update OwnROM:</font></h5>
+            <h5>Update OwnROM:</h5>
             <p>-Download Latest OwnROM
                 </br>-Download Latest OwnDroid G-Apps
                 </br>-Push To The Download Directory
@@ -370,7 +370,7 @@ p{text-align:center;}</style>
                 </br>-Flash ROM and G-Apps
                 </br>-Reboot And Own Your Droid!!!
             </p>
-            <p><font face=Roboto-Thin>As always, no one but only you can be held responsible if you (soft) brick your device. So don't cry here...</font>
+            <p>As always, no one but only you can be held responsible if you (soft) brick your device. So don't cry here...
             </p>
 </div>
 
@@ -391,7 +391,7 @@ p{text-align:center;}</style>
 </div>
 </div>
 
-<h5><font face=Roboto-Thin>&nbsp;Add-Ons/Extras</font>
+<h5>&nbsp;Add-Ons/Extras
 </h5>
 <ul class=collapsible>
     <li>
@@ -424,7 +424,7 @@ p{text-align:center;}</style>
 </div>
 
 
-<h5><font face=Roboto-Thin>&nbsp;Download KitKat (Android 4.4.4)</font>
+<h5>&nbsp;Download KitKat (Android 4.4.4)
 </h5>
 <ul class=collapsible>
 
@@ -580,7 +580,7 @@ p{text-align:center;}</style>
 </div>
 </div>
 
-<h5><font face=Roboto-Thin>&nbsp;Download Lollipop (Android 5.0.2) (In The Works)</font></h5>
+<h5>&nbsp;Download Lollipop (Android 5.0.2) (In The Works)</h5>
 <p>&nbsp;&nbsp;Devices that currently have downloads will be listed below. As more become available they will be added.</p>
 <ul class=collapsible>
    
@@ -738,8 +738,7 @@ p{text-align:center;}</style>
         <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
     </div>
-    </FONT>
-    </div>
+       </div>
     </footer>
 <script>
     (function (i, s, o, g, r, a, m) {
