Cleaned up code

--- a/index.html
+++ b/index.html
@@ -2,88 +2,103 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <meta name=theme-color content="#253238">
     <title>OwnRom</title>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8" />
     <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <style>
-        h5 {
-            text-align: center;
-        }
-        p {
-            text-align: center;
-        }
+    h5 {
+        text-align: center;
+    }
+    p {
+        text-align: center;
+    }
     </style>
 </head>
 
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
- <style>
+    <style>
     * {
-      font-family: Roboto;
+        font-family: Roboto;
     }
-</style>
+    </style>
 </body>
 
 <nav>
-<div class="nav-wrapper fglh454">
-<a href=index.html class=brand-logo>&nbsp;OwnRom</a>
-<ul id=nav-mobile class="right side-nav">
-<li><a class=mdi-editor-border-color target="_blank" href="https://ownrom.blogspot.com">&nbsp;Blog</a></li>
-<li><a class=mdi-file-cloud-download href=downloads.html>&nbsp;Downloads</a></li>
-<li><a class=mdi-action-account-box href=team.html>&nbsp;The Team</a></li>
-<li><a class=mdi-content-add-box href=contribute.html>&nbsp;Contribute</a></li>
-<li><a class=mdi-device-storage href=about.html>&nbsp;Features And Links</a></li>
-</ul>
-<a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
-</div>
+    <div class="nav-wrapper fglh454">
+        <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
+        <ul id=nav-mobile class="right side-nav">
+            <li><a class=mdi-editor-border-color target="_blank" href="https://ownrom.blogspot.com">&nbsp;Blog</a>
+            </li>
+            <li><a class=mdi-file-cloud-download href=downloads.html>&nbsp;Downloads</a>
+            </li>
+            <li><a class=mdi-action-account-box href=team.html>&nbsp;The Team</a>
+            </li>
+            <li><a class=mdi-content-add-box href=contribute.html>&nbsp;Contribute</a>
+            </li>
+            <li><a class=mdi-device-storage href=about.html>&nbsp;Features And Links</a>
+            </li>
+        </ul>
+        <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
+    </div>
 </nav>
 
 
 <h5>This Is OwnRom!
 </h5>
-    <div class="center">
-<img width=250 height=423 align=middle src="images/11.png">
-<img width=250 height=423 align=middle src="images/22.png">
-<img width=250 height=423 align=middle src="images/33.png">
-<img width=250 height=423 align=middle src="images/44.png">
-<img width=250 height=423 align=middle src="images/55.png">
-<h5>We Do Android Development Our Own Way!!!</h5>
+<div class="center">
+    <img width=250 height=423 align=middle src="images/11.png">
+    <img width=250 height=423 align=middle src="images/22.png">
+    <img width=250 height=423 align=middle src="images/33.png">
+    <img width=250 height=423 align=middle src="images/44.png">
+    <img width=250 height=423 align=middle src="images/55.png">
+    <h5>We Do Android Development Our Own Way!!!</h5>
 
 
 
 
 </div>
 <footer class="white">
-               <div class="row">
-    <div class="center">
-           <a href="https://plus.google.com/communities/108869588356214314591" target="_blank"><font color=0b9b8c>| Google+ Community |</font></a>
-        <a href="https://twitter.com/Own_Droid" target="_blank"><font color=0b9b8c> Twitter |</font></a>
-        <a href="https://www.facebook.com/OwnDroid.nl" target="_blank"><font color=0b9b8c>Facebook |</font></a>
-        <a href="https://github.com/OwnROM" target="_blank"><font color=0b9b8c>GitHub |</font></a>
-        <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank"><font color=0b9b8c>RSS |</font></a>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank"><font color=0b9b8c>Donate |</font></a>
+    <div class="row">
+        <div class="center">
+            <a href="https://plus.google.com/communities/108869588356214314591" target="_blank">
+                <font color=0b9b8c>| Google+ Community |</font>
+            </a>
+            <a href="https://twitter.com/Own_Droid" target="_blank">
+                <font color=0b9b8c> Twitter |</font>
+            </a>
+            <a href="https://www.facebook.com/OwnDroid.nl" target="_blank">
+                <font color=0b9b8c>Facebook |</font>
+            </a>
+            <a href="https://github.com/OwnROM" target="_blank">
+                <font color=0b9b8c>GitHub |</font>
+            </a>
+            <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank">
+                <font color=0b9b8c>RSS |</font>
+            </a>
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank">
+                <font color=0b9b8c>Donate |</font>
+            </a>
+        </div>
     </div>
-    </div>
-    </footer> 
+</footer>
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-56987211-1', 'auto');
-    ga('send', 'pageview');
+(function(i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+ga('create', 'UA-56987211-1', 'auto');
+ga('send', 'pageview');
 </script>
 
 </html>
-
-
