--- a/404.html
+++ b/404.html
@@ -2,74 +2,86 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <meta name=theme-color content="#253238">
     <title>404 Error</title>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8" />
     <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <style>
-        h5 {
-            text-align: center;
-        }
-        p {
-            text-align: center;
-        }
+    h5 {
+        text-align: center;
+    }
+    p {
+        text-align: center;
+    }
     </style>
 </head>
 
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
+
     <body bgcolor="#000000">
-    <style>
-    * {
-      font-family: Roboto;
-    }
-</style>
-</body>
+        <style>
+        * {
+            font-family: Roboto;
+        }
+        </style>
+    </body>
 
-<nav>
-<div class="nav-wrapper fglh454">
-<a href=index.html class=brand-logo>&nbsp;OwnRom</a>
-<ul id=nav-mobile class="right side-nav">
-<li><a href=index.html class="mdi-content-send">&nbsp;Back To Home</a></li>
-</ul>
-<a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
-</div>
-</nav>
-
-
-
-<p><font color=ffffff>Error 404</font></p>
- <div class="center">
-<img align=middle src="images/recovery.png">
-
-<p><font color=ffffff>The page you are looking for does not exist</font></p>
-<p><font color=ffffff>OR</font></p>
-<p><font color=ffffff>There is a problem on our end (Try reloading the page)</font></p>
-
-<p><font color=ffffff>Can't find what your looking for? Search through our site here:</font></p>
-<script>
-    (function () {
-        var cx = '014947599726659098388:7e5uxgdf8ug';
-        var gcse = document.createElement('script');
-        gcse.type = 'text/javascript';
-        gcse.async = true;
-        gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//www.google.com/cse/cse.js?cx=' + cx;
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(gcse, s);
-    })();
-</script>
-<gcse:search></gcse:search>
+    <nav>
+        <div class="nav-wrapper fglh454">
+            <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
+            <ul id=nav-mobile class="right side-nav">
+                <li><a href=index.html class="mdi-content-send">&nbsp;Back To Home</a>
+                </li>
+            </ul>
+            <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
+        </div>
+    </nav>
 
 
- 
-</div>
-<script>
-    (function (i, s, o, g, r, a, m) {
+
+    <p>
+        <font color=ffffff>Error 404</font>
+    </p>
+    <div class="center">
+        <img align=middle src="images/recovery.png">
+
+        <p>
+            <font color=ffffff>The page you are looking for does not exist</font>
+        </p>
+        <p>
+            <font color=ffffff>OR</font>
+        </p>
+        <p>
+            <font color=ffffff>There is a problem on our end (Try reloading the page)</font>
+        </p>
+
+        <p>
+            <font color=ffffff>Can't find what your looking for? Search through our site here:</font>
+        </p>
+        <script>
+        (function() {
+            var cx = '014947599726659098388:7e5uxgdf8ug';
+            var gcse = document.createElement('script');
+            gcse.type = 'text/javascript';
+            gcse.async = true;
+            gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//www.google.com/cse/cse.js?cx=' + cx;
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(gcse, s);
+        })();
+        </script>
+        <gcse:search></gcse:search>
+
+
+
+    </div>
+    <script>
+    (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
+        i[r] = i[r] || function() {
             (i[r].q = i[r].q || []).push(arguments)
         }, i[r].l = 1 * new Date();
         a = s.createElement(o), m = s.getElementsByTagName(o)[0];
@@ -79,8 +91,6 @@
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-56987211-1', 'auto');
     ga('send', 'pageview');
-</script>
+    </script>
 
 </html>
-
-
