--- a/changelog.html
+++ b/changelog.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <meta name=theme-color content="#253238">
     <title>Changelog</title>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8" />
     <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <style>
-        h5 {
-            text-align: center;
-        }
-        p {
-            text-align: center;
-        }
+    h5 {
+        text-align: center;
+    }
+    p {
+        text-align: center;
+    }
     </style>
 </head>
 
@@ -23,19 +23,20 @@
     <script src="js/materialize.min.js"></script>
     <style>
     * {
-      font-family: Roboto;
+        font-family: Roboto;
     }
-</style>
+    </style>
 </body>
 
 <nav>
-<div class="nav-wrapper fglh454">
-<a href=index.html class=brand-logo>&nbsp;OwnRom</a>
-<ul id=nav-mobile class="right side-nav">
-<li><a href=downloads.html class="mdi-content-send">&nbsp;Back To Downloads</a></li>
-</ul>
-<a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
-</div>
+    <div class="nav-wrapper fglh454">
+        <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
+        <ul id=nav-mobile class="right side-nav">
+            <li><a href=downloads.html class="mdi-content-send">&nbsp;Back To Downloads</a>
+            </li>
+        </ul>
+        <a class=button-collapse href="#" data-activates=nav-mobile><i class=mdi-navigation-menu></i></a>
+    </div>
 </nav>
 
 
@@ -49,20 +50,18 @@
 
 </div>
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-56987211-1', 'auto');
-    ga('send', 'pageview');
+(function(i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+ga('create', 'UA-56987211-1', 'auto');
+ga('send', 'pageview');
 </script>
 
 </html>
-
-
