--- a/team.html
+++ b/team.html
@@ -100,7 +100,7 @@
 
     <div class="row hide-on-med-and-down">
         <div class="center">
-            <img src="images/photo.jpg" style="width:120px;height:120px">
+            <img src="images/photo.png" style="width:120px;height:120px">
             <img src="images/nl-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Mark Visser</h5>
@@ -122,7 +122,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo10.jpg" style="width:120px;height:120px">
+            <img src="images/photo10.png" style="width:120px;height:120px">
             <img src="images/us-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Jason Surprenant</h5>
@@ -168,7 +168,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo2.jpg" style="width:120px;height:120px">
+            <img src="images/photo2.png" style="width:120px;height:120px">
             <img src="images/in-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Gokul Balram</h5>
@@ -192,7 +192,7 @@
     <div class=row>
         <div class="center">
 
-            <img src="images/photo3.jpg" style="width:120px;height:120px">
+            <img src="images/photo3.png" style="width:120px;height:120px">
             <img src="images/in-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Kunal Patil</h5>
@@ -217,7 +217,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo8.jpg" style="width:120px;height:120px">
+            <img src="images/photo8.png" style="width:120px;height:120px">
             <img src="images/gm-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Nils Dohmen</h5>
@@ -232,7 +232,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo9.jpg" style="width:120px;height:120px">
+            <img src="images/photo9.png" style="width:120px;height:120px">
             <img src="images/in-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Rohit Arora</h5>
@@ -247,7 +247,7 @@
     <div class=row>
 
         <div class="center">
-            <img src="images/photo4.jpg" style="width:120px;height:120px">
+            <img src="images/photo4.png" style="width:120px;height:120px">
             <img src="images/nl-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Shane Kloosterman</h5>
@@ -261,7 +261,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo12.jpg" style="width:120px;height:120px">
+            <img src="images/photo12.png" style="width:120px;height:120px">
             <img src="images/us-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Esteban Rodriguez</h5>
@@ -275,7 +275,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo6.jpg" style="width:120px;height:120px">
+            <img src="images/photo6.png" style="width:120px;height:120px">
             <img src="images/my-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Nasir Ahmed</h5>
@@ -289,7 +289,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo7.jpg" style="width:120px;height:120px">
+            <img src="images/photo7.png" style="width:120px;height:120px">
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Bram Ruttens</h5>
@@ -303,7 +303,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo11.jpg" style="width:120px;height:120px">
+            <img src="images/photo11.png" style="width:120px;height:120px">
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Ilyas Jaspers</h5>
@@ -317,7 +317,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo13.jpg" style="width:120px;height:120px">
+            <img src="images/photo13.png" style="width:120px;height:120px">
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Ebert Schoofs</h5>
@@ -360,7 +360,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo.jpg" style="width:120px;height:120px">
+            <img src="images/photo.png" style="width:120px;height:120px">
             <img src="images/nl-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Mark Visser</h5>
@@ -380,7 +380,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo10.jpg" style="width:120px;height:120px">
+            <img src="images/photo10.png" style="width:120px;height:120px">
             <img src="images/us-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Jason Surprenant</h5>
@@ -433,7 +433,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo2.jpg" style="width:120px;height:120px">
+            <img src="images/photo2.png" style="width:120px;height:120px">
             <img src="images/in-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Gokul Balram</h5>
@@ -461,7 +461,7 @@
     <div class=row>
         <div class="center">
 
-            <img src="images/photo3.jpg" style="width:120px;height:120px">
+            <img src="images/photo3.png" style="width:120px;height:120px">
             <img src="images/in-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Kunal Patil</h5>
@@ -490,7 +490,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo8.jpg" style="width:120px;height:120px">
+            <img src="images/photo8.png" style="width:120px;height:120px">
             <img src="images/gm-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Nils Dohmen</h5>
@@ -505,7 +505,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo9.jpg" style="width:120px;height:120px">
+            <img src="images/photo9.png" style="width:120px;height:120px">
             <img src="images/in-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Rohit Arora</h5>
@@ -520,7 +520,7 @@
     <div class=row>
 
         <div class="center">
-            <img src="images/photo4.jpg" style="width:120px;height:120px">
+            <img src="images/photo4.png" style="width:120px;height:120px">
             <img src="images/nl-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Shane Kloosterman</h5>
@@ -534,7 +534,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo12.jpg" style="width:120px;height:120px">
+            <img src="images/photo12.png" style="width:120px;height:120px">
             <img src="images/us-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Esteban Rodriguez</h5>
@@ -548,7 +548,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo6.jpg" style="width:120px;height:120px">
+            <img src="images/photo6.png" style="width:120px;height:120px">
             <img src="images/my-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Nasir Ahmed</h5>
@@ -562,7 +562,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo7.jpg" style="width:120px;height:120px">
+            <img src="images/photo7.png" style="width:120px;height:120px">
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Bram Ruttens</h5>
@@ -576,7 +576,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo11.jpg" style="width:120px;height:120px">
+            <img src="images/photo11.png" style="width:120px;height:120px">
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Ilyas Jaspers</h5>
@@ -590,7 +590,7 @@
 
     <div class=row>
         <div class="center">
-            <img src="images/photo13.jpg" style="width:120px;height:120px">
+            <img src="images/photo13.png" style="width:120px;height:120px">
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Ebert Schoofs</h5>
