--- a/changelog.html
+++ b/changelog.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
     <meta name=theme-color content="#253238">
     <title>Changelog</title>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8" />
@@ -16,11 +16,14 @@
         text-align: center;
     }
     </style>
+     <!--[if lt IE 9]>
+    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+<![endif]-->
 </head>
 
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+      <script src="js/bin/materialize.min.js"></script>
     <style>
     * {
         font-family: Roboto;
