--- a/downloads.html
+++ b/downloads.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
     <meta name=theme-color content="#253238">
     <title>Downloads</title>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8" />
@@ -16,11 +16,14 @@
         text-align: center;
     }
     </style>
+     <!--[if lt IE 9]>
+    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+<![endif]-->
 </head>
 
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+      <script src="js/bin/materialize.min.js"></script>
     <style>
     * {
         font-family: Roboto;
@@ -30,7 +33,7 @@
 
 <header>
     <nav id="">
-        <div class="nav-wrapper fglh454">
+        <div class="nav-wrapper colmat base">
             <a href=index.html class=brand-logo>&nbsp;OwnRom</a>
             <ul id=nav-mobile class="right side-nav">
                 <li><a class=mdi-editor-border-color target="_blank" href="https://ownrom.blogspot.com">&nbsp;Blog</a>
@@ -135,7 +138,7 @@
                     <div class=row>
 
                         <div class="col s12 m6">
-                            <div class="card fglh454">
+                            <div class="card colmat base">
                                 <div class="card-image">
                                     <span class="card-title">Card Title</span>
                                 </div>
@@ -167,7 +170,7 @@
                         <div class=collapsible-body>
                             <div class=row>
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -185,7 +188,7 @@
                                 </div>
 
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -204,7 +207,7 @@
 
 
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -228,7 +231,7 @@
                             <div class=row>
 
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -251,7 +254,7 @@
                         <div class=collapsible-body>
                             <div class=row>
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -269,7 +272,7 @@
                                 </div>
 
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -287,7 +290,7 @@
                                 </div>
 
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -311,7 +314,7 @@
                         <div class=collapsible-body>
                             <div class=row>
                                 <div class="col s12 m6">
-                                    <div class="card fglh454">
+                                    <div class="card colmat base">
                                         <div class="card-image">
                                             <span class="card-title">Card Title</span>
                                         </div>
@@ -343,7 +346,7 @@
                             <div class=collapsible-body>
                                 <div class=row>
                                     <div class="col s12 m6">
-                                        <div class="card fglh454">
+                                        <div class="card colmat base">
                                             <div class="card-image">
                                                 <span class="card-title">Card Title</span>
                                             </div>
@@ -369,7 +372,7 @@
                                 <div class=row>
 
                                     <div class="col s12 m6">
-                                        <div class="card fglh454">
+                                        <div class="card colmat base">
                                             <div class="card-image">
                                                 <span class="card-title">Card Title</span>
                                             </div>
@@ -470,7 +473,7 @@
                                         <div class=row>
 
                                             <div class="col s12 m6">
-                                                <div class="card fglh454">
+                                                <div class="card colmat base">
                                                     <div class="card-image">
                                                         <span class="card-title">Card Title</span>
                                                     </div>
@@ -506,7 +509,7 @@
                                         <div class=collapsible-body>
                                             <div class=row>
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -524,7 +527,7 @@
                                                 </div>
 
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -543,7 +546,7 @@
 
 
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -567,7 +570,7 @@
                                             <div class=row>
 
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -590,7 +593,7 @@
                                         <div class=collapsible-body>
                                             <div class=row>
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -608,7 +611,7 @@
                                                 </div>
 
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -626,7 +629,7 @@
                                                 </div>
 
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -650,7 +653,7 @@
                                         <div class=collapsible-body>
                                             <div class=row>
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -686,7 +689,7 @@
                                         <div class=collapsible-body>
                                             <div class=row>
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -712,7 +715,7 @@
                                             <div class=row>
 
                                                 <div class="col s12 m6">
-                                                    <div class="card fglh454">
+                                                    <div class="card colmat base">
                                                         <div class="card-image">
                                                             <span class="card-title">Card Title</span>
                                                         </div>
@@ -837,22 +840,22 @@
     <div class="row">
         <div class="center">
             <a href="https://plus.google.com/communities/108869588356214314591" target="_blank">
-                <font color=0b9b8c>| Google+ Community |</font>
+                | Google+ Community |
             </a>
             <a href="https://twitter.com/Own_Droid" target="_blank">
-                <font color=0b9b8c> Twitter |</font>
+                 Twitter |
             </a>
             <a href="https://www.facebook.com/OwnDroid.nl" target="_blank">
-                <font color=0b9b8c>Facebook |</font>
+                Facebook |
             </a>
             <a href="https://github.com/OwnROM" target="_blank">
-                <font color=0b9b8c>GitHub |</font>
+                GitHub |
             </a>
             <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank">
-                <font color=0b9b8c>RSS |</font>
+                RSS |
             </a>
             <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank">
-                <font color=0b9b8c>Donate |</font>
+                Donate |
             </a>
         </div>
     </div>
