--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
     <meta name=theme-color content="#253238">
     <title>The Team</title>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8" />
@@ -16,11 +16,14 @@
         text-align: center;
     }
     </style>
+     <!--[if lt IE 9]>
+    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+<![endif]-->
 </head>
 
 <body>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+      <script src="js/bin/materialize.min.js"></script>
     <style>
     * {
         font-family: Roboto;
@@ -706,25 +709,24 @@
     <div class="row">
         <div class="center">
             <a href="https://plus.google.com/communities/108869588356214314591" target="_blank">
-                <font color=0b9b8c>| Google+ Community |</font>
+                | Google+ Community |
             </a>
             <a href="https://twitter.com/Own_Droid" target="_blank">
-                <font color=0b9b8c> Twitter |</font>
+                 Twitter |
             </a>
             <a href="https://www.facebook.com/OwnDroid.nl" target="_blank">
-                <font color=0b9b8c>Facebook |</font>
+                Facebook |
             </a>
             <a href="https://github.com/OwnROM" target="_blank">
-                <font color=0b9b8c>GitHub |</font>
+                GitHub |
             </a>
             <a href="http://feeds.feedburner.com/blogspot/LlNfUf" target="_blank">
-                <font color=0b9b8c>RSS |</font>
+                RSS |
             </a>
             <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D47RR4JRTHAY" target="_blank">
-                <font color=0b9b8c>Donate |</font>
+                Donate |
             </a>
         </div>
-
     </div>
 </footer>
 <script>
