Updated my description and phone

--- a/team.html
+++ b/team.html
@@ -597,7 +597,7 @@
             <img src="images/be-lgflag.gif" style="height:120px">
             <div class="col s12 m10 offset-m1">
                 <h5>Ebert Schoofs</h5>
-                <p>Maintains:Lg p760 (L760)</p>
+                <p>Maintains:Lg Optimus L9 (p760/765)</p>
                 <a class="modal-trigger" href="#modal13">
                     <font color=0b9b8c>Read More</font>
                 </a>
@@ -697,7 +697,7 @@
 
 <div id="modal13" class="modal">
     <h4>Description</h4>
-    <p>Description in the works...</p>
+    <p>I'm a beginning Android developer and fanboy. I still have to learn a lot but I do my best. </p>
     <a href="https://plus.google.com/u/0/+ebertschoofs " target="_blank" class="waves-effect btn-flat modal_close">Google+ Profile</a>
     <a href=" http://forum.xda-developers.com/member.php?u=5003779" target="_blank" class="waves-effect btn-flat modal_close">XDA Profile</a>
 </div>
